add next site map

--- a/content/post/eunhe.mdx
+++ b/content/post/eunhe.mdx
@@ -1,6 +1,8 @@
 ---
-title: 어엄준식
-description: djdja
+title: eunhe
+description: dsffds
+published: true
+tags: react
 ---
 
 # Coz Shopping Project
